--- a/responsive.css
+++ b/responsive.css
@@ -655,6 +655,7 @@
     #footer-bottom p {
         line-height: normal;
         padding-left: 15px;
+        padding-top: 15px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
