--- a/style.css
+++ b/style.css
@@ -1097,7 +1097,7 @@ ul {
 }
 
 #news-home {
-    background-image: url(images/background2.png);
+    background-image: url(images/background2.jpg);
     background-repeat: repeat;
     padding: 30px 0px;
 }
@@ -1343,10 +1343,12 @@ ul {
     padding-bottom: 15px;
 }
 
-#footer .col2 li i {
+#footer .col2 li i, #footer .col2 li svg {
     color: #fff;
-    padding-right: 10px;
+    padding-right: 5px;
     font-size: 16px;
+    width: 23px;
+    height: 14px;
 }
 
 #footer-bottom {
@@ -1876,7 +1878,6 @@ ul {
     margin-top: -50vh;
     background-size: 100% 100%;
     background-position: center center;
-    transition: 0.5s ease-in-out;
 }
 .slide__inner:before {
     content: "";
@@ -1886,17 +1887,6 @@ ul {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.3);
-}
-.slide__inner:hover {
-    transform: scale(1.2,1.2);
-    -webkit-transform: scale(1.2,1.2);
-    -moz-transform: scale(1.2,1.2);
-    -o-transform: scale(1.2,1.2);
-    -ms-transform: scale(1.2,1.2);
-}
-.slide__inner:hover .text {
-    transition: 0.5s ease-in-out;
-    top: 200px;
 }
 .slide__content {
     position: relative;
