--- a/responsive.css
+++ b/responsive.css
@@ -15,10 +15,6 @@
     display: none;
 }
 
-#about-cty .right ul li i{
-    display: none;
-}
-
 .mb-search-box {
     position: fixed;
     overflow-y: auto;
@@ -225,6 +221,10 @@
     .rorate {
         transform: rotate(90deg);
         transition: .5s;
+    }
+
+    #slides-home .text {
+        display: none;
     }
 
     .slider-thumbnail {
@@ -663,19 +663,5 @@
 
     .mfb-component--br {
         bottom: 20px;
-    }
-
-    .slider {
-        height: 30vh;
-    }
-
-    .slide__inner {
-        width: 100vw;
-        height: 30vh;
-        top: 73%;
-    }
-
-    .slide__inner .text, .slider__control {
-        display: none;
     }
 }
