--- a/css/style.css
+++ b/css/style.css
@@ -1752,7 +1752,7 @@ ul {
   height: 56px;
   width: 56px;
   z-index: 20;
-  background-color: #0098d2;
+  background: linear-gradient(#0e95c9, #1068a4);
 }
 
 .mfb-component__button--main:hover {
@@ -2409,4 +2409,20 @@ ul {
   height: 150px !important;
   object-fit: scale-down !important;
   padding: 10px;
+}
+
+.mfb-component__button--child {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.mfb-component__button--child svg {
+  width: 70px;
+  position: absolute;
+  height: 35px;
+  top: 50%;
+  left: 52%;
+  transform: translate(-50%, -50%);
 }
