--- a/css/style.css
+++ b/css/style.css
@@ -584,6 +584,16 @@ ul {
 
 .slider-thumbnail .owl-item {
   width: auto;
+  transition: .4s ease-in-out;
+}
+
+.slider-thumbnail .owl-item:hover {
+  background-color: #0e95c9;
+  color: #fff;
+}
+
+.slider-thumbnail .owl-item:hover a{
+  color: #fff;
 }
 
 #news-event {
@@ -2406,7 +2416,7 @@ ul {
 .img-hvr img {
   display: block;
   width: 100%;
-  height: 150px !important;
+  height: 115px;
   object-fit: scale-down !important;
   padding: 10px;
 }
