--- a/css/sanpham.css
+++ b/css/sanpham.css
@@ -1,7 +1,3 @@
-.pos-re {
-    position: relative;
-}
-
 .crumb {
     background-color: #f5f5f5;
     padding-top: 10px;
@@ -50,12 +46,16 @@
     overflow: hidden;
 }
 
-.img-hvr img {
+.img-sp:hover h2 {
+    display: none;
+}
+
+.img-sp img {
     display: block;
     width: 100%;
 }
 
-.item-hvr img {
+.img-sp img {
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
     box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -65,7 +65,7 @@
     transition-property: transform;
 }
 
-.item-hvr:hover img {
+.img-sp:hover img {
     -webkit-transform: scale(1.05);
     transform: scale(1.05);
     opacity:1;
@@ -98,7 +98,7 @@
     transition: all 0.2s ease-out;
 }
 
-.item-cat-page:hover .mask-cat {
+.img-sp:hover .mask-cat {
     visibility: visible;
     transform: translate(0,0px);
 }
