--- a/css/style.css
+++ b/css/style.css
@@ -2469,3 +2469,14 @@ ul {
     color: #fff;
 }
 
+#banner-product {
+  width: 100%;
+}
+
+#banner-product img {
+  width: 100%;
+}
+
+.page-one {
+  padding: 50px 0px;
+}
