--- a/css/style.css
+++ b/css/style.css
@@ -585,19 +585,17 @@ ul {
 }
 
 .slider-thumbnail .owl-item {
-
-  width: auto;
-  transition: .4s ease-in-out;
+    width: auto;
+    transition: 0.4s ease-in-out;
 }
 
 .slider-thumbnail .owl-item:hover {
-  background-color: #0e95c9;
-  color: #fff;
+    background-color: #0e95c9;
+    color: #fff;
 }
 
-.slider-thumbnail .owl-item:hover a{
-  color: #fff;
-
+.slider-thumbnail .owl-item:hover a {
+    color: #fff;
 }
 
 #news-event {
@@ -2404,11 +2402,11 @@ ul {
 }
 
 .img-hvr img {
-  display: block;
-  width: 100%;
-  height: 115px;
-  object-fit: scale-down !important;
-  padding: 10px;
+    display: block;
+    width: 100%;
+    height: 115px;
+    object-fit: scale-down !important;
+    padding: 10px;
 }
 
 .mfb-component__button--child {
@@ -2421,29 +2419,28 @@ ul {
 .mfb-component__button--child svg {
     width: 70px;
     position: absolute;
-
-    top: 55%;
-    right: -7%;
+    top: 50%;
+    left: 50%;
     width: 40px;
     height: 40px;
-    margin-left: -30px;
-    margin-top: -30px;
-    border-radius: 50%;
-    background: #0098d2;
+    transform: translate(-50%, -50%);
+    /* margin-left: -30px; */
+    /* margin-top: -30px; */
+    /* border-radius: 50%; */
+    /* background: #0098d2; */
     transition: background-color 0.3s;
     cursor: pointer;
     color: #fff;
 }
 
 #banner-product {
-  width: 100%;
+    width: 100%;
 }
 
 #banner-product img {
-  width: 100%;
+    width: 100%;
 }
 
 .page-one {
-  padding: 50px 0px;
-
+    padding: 50px 0px;
 }
