--- a/css/style.css
+++ b/css/style.css
@@ -2169,7 +2169,7 @@ ul {
 }
 
 .slide:nth-child(1) .slide__inner {
-    background-image: url("https://sudospaces.com/hoaphat-com-vn/2020/05/kv-tap-doan-trang-chu.jpg");
+    /* background-image: url("https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"); */
 }
 
 .slide:nth-child(2) .slide__inner {
@@ -2203,13 +2203,15 @@ ul {
 .slide__inner {
     position: absolute;
     left: 50%;
+    background: url(https://images.pexels.com/photos/233698/pexels-photo-233698.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
     top: 50%;
-    width: 115vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     margin-left: -50vw;
+    background-repeat: no-repeat;
     margin-top: -50vh;
-    background-size: 100% 100%;
-    background-position: center center;
+    /* background-size: 100% 100%; */
+    /* background-position: center center; */
 }
 
 .slide__inner:before {
